ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bvrinfra-portfolio
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: bvrinfra.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bvrinfra-portfolio
                port:
                  number: 80
    - host: www.bvrinfra.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bvrinfra-portfolio
                port:
                  number: 80
